--- a/AI Doctor/index.html
+++ b/AI Doctor/index.html
@@ -56,7 +56,7 @@
                 <h2>Answer:</h2>
                 <textarea id="answer" rows="4" cols="50" readonly></textarea>
             </div>
-            <div class="slider">
+            <!-- <div class="slider">
                 <h2>Token:</h2>
                 <input type="range" min="0" max="100" value="50" id="tokenSlider">
             </div>
@@ -67,7 +67,7 @@
             <div class="slider">
                 <h2>Top P:</h2>
                 <input type="range" min="0" max="100" value="50" id="topPSlider">
-            </div>
+            </div> -->
         </div>
        
     </div>
@@ -92,3 +92,4 @@
     </script>
 </body>
 </html>
+
