--- a/AI Doctor/index.html
+++ b/AI Doctor/index.html
@@ -26,7 +26,11 @@
                 </div>
 
                 <div class="Info">
-                    John Doe
+                    Name : <span id="name" class="green-text">John Doe</span></br>
+                    Phone : <span id="phone" class="green-text">1234567890</span> </br>
+                    Age : <span id="age" class="green-text">25</span> </br>
+                    Weight : <span id="weight" class="green-text">75</span></br>
+                    Height : <span id="height" class="green-text">5.8</span></br>
                 </div>
 
 
@@ -48,12 +52,12 @@
         <div class="mainbox">
             
             <div class="textbox">
-                <h2>Instructions:</h2>
-                <p>Write your symptoms below:</p>
+                
+                <p>Response</p>
                 <textarea id="symptoms" rows="4" cols="50"></textarea>
             </div>
             <div class="textbox">
-                <h2>Answer:</h2>
+                <h2>Symptoms/problems/questions</h2>
                 <textarea id="answer" rows="4" cols="50" readonly></textarea>
             </div>
             <!-- <div class="slider">
@@ -92,4 +96,3 @@
     </script>
 </body>
 </html>
-
