--- a/AI Doctor/index.html
+++ b/AI Doctor/index.html
@@ -59,6 +59,7 @@
             <div class="textbox">
                 <h2>Symptoms/problems/questions</h2>
                 <textarea id="answer" rows="4" cols="50" readonly></textarea>
+                 <button id="sendButton">Send</button>
             </div>
             <!-- <div class="slider">
                 <h2>Token:</h2>
