--- a/AI Doctor/index.html
+++ b/AI Doctor/index.html
@@ -52,14 +52,14 @@
         <div class="mainbox">
             
             <div class="textbox">
-                
+
                 <p>Response</p>
-                <textarea id="symptoms" rows="4" cols="50"></textarea>
+                <textarea id="answer" rows="4" cols="50" readonly></textarea>
             </div>
             <div class="textbox">
                 <h2>Symptoms/problems/questions</h2>
-                <textarea id="answer" rows="4" cols="50" readonly></textarea>
-                 <button id="sendButton">Send</button>
+                <textarea id="Symptoms" rows="4" cols="50" ></textarea>
+                <button id="sendButton">Send</button>
             </div>
             <!-- <div class="slider">
                 <h2>Token:</h2>
